--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ whitenoise==6.7.0
 mysqlclient==2.2.4
 PyJWT==2.9.0
 
+# Production scalability
+psycopg2-binary==2.9.9
+django-redis==5.4.0
+
+# Production WSGI/ASGI server and cache client
+gunicorn==22.0.0
+redis==5.1.1
+
